# CompFin

./: CLAUDE.md  Cargo.toml  CompFin_20260301.tar  CompFin_20260320.tar  Dockerfile  FindDepulicateCell  README.md  test.rs
json/: config.json
src/: configuration.rs  lib.rs  main.rs  objectwithuuid.rs  pricingcondition.rs
src/instrument/: instrument.rs  nominalgenerator.rs
src/interestrate/: compounding.rs
src/manager/: manager.rs  managererror.rs  namedobject.rs
src/market/: currency.rs  fxmarket.rs  market.rs  singlecurrencymarket.rs
src/marketdata/: marketdataset.rs  quote.rs
src/math/: rootsolver.rs  round.rs
src/pricer/: pricer.rs  simpleinstrumentpricer.rs
src/time/: businessdayadjuster.rs  optiondategenerator.rs  period.rs  rangeofdates.rs  utility.rs
src/value/: cashflows.rs  npv.rs
work_log/interest_rate_index/: claude_answer_1.md  claude_answer_2.md  claude_answer_3.md  claude_answer_4.md  claude_summary.md  claude_summary_4.md  gemini_answer_1.md  gemini_answer_2.md  gemini_answer_3.md  gemini_answer_4.md  user_action_1.md  user_action_4.md  user_question_1.md  user_question_2.md  user_question_3.md  user_question_4.md
work_log/least_square_calibrator/: claude_answer_1.md  claude_answer_2.md  claude_answer_3.md  claude_answer_4.md  claude_answer_5.md  claude_answer_6.md  claude_answer_7.md  claude_answer_8.md  gemini_answer_1.md  gemini_answer_2.md  gemini_answer_3.md  gemini_answer_4.md  gemini_answer_5.md  gemini_answer_6.md  gemini_answer_7.md  gemini_answer_8.md  user_question_1.md  user_question_2.md  user_question_3.md  (+5 more)
(+67 files in other folders)
