[package]
name = "compfin"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas-static"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.20"
