[package]
name = "compfin"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
nalgebra = "0.34.2"
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.23.0"
thiserror = "2"
argmin = "0.11"
argmin-math = { version = "0.4", features = ["nalgebra_latest"] }
